fixed some alignment issue

--- a/app/styles/pages/reports.less
+++ b/app/styles/pages/reports.less
@@ -2894,6 +2894,9 @@ div.strategy_total_container {
         width: 550px;
         border:1px none #FF6600;
     }
+    .creativesTpl_vid_col {
+        width:475px;
+    }
     .vid_none {
         width: 125px !important;
     }
